[gd_scene load_steps=11 format=2]

[ext_resource path="res://Zassets/Fonts/MonsterPumpkin.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Zassets/ghost/ghost-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Stage/Forest.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainMenu2/MainMenu2.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 1 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 4 )
speed = 100.0

[node name="Forest" parent="." instance=ExtResource( 3 )]
scale = Vector2( 1.7, 1.7 )
transform = Transform2D( 1.7, 0, 0, 1.7, 0, 0 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="CenterContainer"]
position = Vector2( 431, 244 )
current = true

[node name="Menu" type="VBoxContainer" parent="CenterContainer"]
margin_left = 431.0
margin_top = 246.0
margin_right = 592.0
margin_bottom = 353.0
alignment = 1

[node name="MenuItem" type="HBoxContainer" parent="CenterContainer/Menu"]
margin_right = 161.0
margin_bottom = 33.0
alignment = 1

[node name="Sprite" type="AnimatedSprite" parent="CenterContainer/Menu/MenuItem"]
position = Vector2( -0.943909, 14.1581 )
frames = SubResource( 5 )
animation = "idle"
playing = true

[node name="Text" type="Label" parent="CenterContainer/Menu/MenuItem"]
margin_left = 20.0
margin_right = 141.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 6 )
text = "    New Game"

[node name="MenuItem2" type="HBoxContainer" parent="CenterContainer/Menu"]
margin_top = 37.0
margin_right = 161.0
margin_bottom = 70.0
alignment = 1

[node name="Sprite" type="AnimatedSprite" parent="CenterContainer/Menu/MenuItem2"]
visible = false
position = Vector2( -0.943909, 14.1581 )
frames = SubResource( 5 )
animation = "idle"
frame = 3
playing = true

[node name="Text" type="Label" parent="CenterContainer/Menu/MenuItem2"]
margin_right = 161.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 6 )
text = "      Leaderboard"

[node name="MenuItem3" type="HBoxContainer" parent="CenterContainer/Menu"]
margin_top = 74.0
margin_right = 161.0
margin_bottom = 107.0
alignment = 1

[node name="Sprite" type="AnimatedSprite" parent="CenterContainer/Menu/MenuItem3"]
visible = false
position = Vector2( -0.943909, 14.1581 )
frames = SubResource( 5 )
animation = "idle"
frame = 3
playing = true

[node name="Text" type="Label" parent="CenterContainer/Menu/MenuItem3"]
margin_left = 30.0
margin_right = 131.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 6 )
text = "    Credits"
